<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".content.MainActivity">

    <TextView
        android:id="@+id/live_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/live_stastic"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/timestamp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/live_statistics" />

    <androidx.cardview.widget.CardView
        android:id="@+id/confirm_card_global"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timestamp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/confirm_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/kasus_terkonfirmasi"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirm_count_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/confirm_count"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/death_card"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/cured_card_global"
        app:layout_constraintStart_toStartOf="@id/confirm_card_global"
        app:layout_constraintTop_toBottomOf="@id/confirm_card_global">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:orientation="vertical"
            android:padding="2dp"
        >

            <TextView
                android:id="@+id/death_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/meninggal"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/death_count_global"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/confirm_count"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"

                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cured_card_global"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/confirm_card_global"
        app:layout_constraintStart_toEndOf="@+id/death_card"
        app:layout_constraintTop_toBottomOf="@id/confirm_card_global">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/cured_global"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sembuh"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cured_count_global"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/confirm_count"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/your_location_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/stastik_indonesia"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/death_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/your_card"
        android:layout_width="200dp"
        app:cardElevation="2dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/your_location_title"
        app:layout_constraintTop_toBottomOf="@id/your_location_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/flag"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_indonesia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/country"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/indonesia"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/flag"
                app:layout_constraintStart_toEndOf="@+id/flag"
                app:layout_constraintTop_toTopOf="@+id/flag"
                tools:ignore="RtlSymmetry,SmallSp" />

            <TextView
                android:id="@+id/confirm_your"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_circle_confirm"
                android:text="@string/confirm_count"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/flag"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/cured_your"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_circle_cure"
                android:text="@string/confirm_count"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/confirm_your"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/death_your"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_circle_death"
                android:text="@string/confirm_count"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/cured_your"
                tools:ignore="SmallSp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/top_global"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/your_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="top,top_rv,confirm_card_global,cured_card_global,death_card,your_card,timestamp,live_statistics,your_location_title" />
</androidx.constraintlayout.widget.ConstraintLayout>